Fix index 'movething' animation on mobiles and tablets

--- a/css/custom.css
+++ b/css/custom.css
@@ -47,6 +47,7 @@ html {
 .movething {
 	max-width: 100%;
 	overflow: hidden;
+	zoom: 1;
 }
 
 .movething .header.with-bg {
